--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.9"
 actix-web = "4"
+actix-rt = "2.6.0" # For asynchronous runtime
+redis="0.25.2"
+tokio={version="1.36.0",features=["full"]}
